+ moved project from Netbeans to IDEA IntelliJ + started to rework node distance computation using the more general framework extracting parameters from jplace filenames